# ukulele-minimax

./: .gitignore  PRD.md  README.md
app/: README.md  analysis_options.yaml  android_manifest_template.xml  pubspec.yaml
app/android/app/: build.gradle.kts
app/assets/sheets/: README.md  ukulele_30.json
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/: constants.dart  router.dart  theme.dart
app/lib/core/audio/: mpm.dart  ring_buffer.dart
app/lib/features/ai_coach/: ai_coach_page.dart  ai_suggestion.dart
app/lib/features/course_center/: course_data.dart  course_detail_page.dart  course_list_page.dart  course_model.dart  lesson_content.dart  lesson_content_page.dart  lesson_content_renderer.dart  svg_illustrations.dart
app/test/: ai_coach_test.dart  chord_chart_test.dart  course_center_test.dart  discover_test.dart  lesson_content_test.dart  mpm_test.dart  music_note_test.dart  practice_cubit_test.dart  score_report_test.dart  sheet_model_test.dart  widget_test.dart
docs/: ARCHITECTURE.md  DEV_NOTES.md  PROTOTYPE.md  SDD.md  TDD.md
scripts/: start_server.bat  start_server.sh
server/: .env.example  pyproject.toml
server/app/: __init__.py  main.py
server/app/api/v1/: auth.py  scoring.py  sheets.py
server/app/core/: config.py  database.py  logging.py  seed.py
server/app/models/: schemas.py  score_record.py  sheet.py  user.py
server/app/services/: scoring.py
server/data/: audio.txt  score.json  sheet.json  ukulele.db
server/tests/: test_e2e.py  test_scoring.py  test_scoring_route.py
(+25 files in other folders)
