[project]
name = "ukulele-server"
version = "0.1.0"
description = "AI 音乐学园后端 - FastAPI + librosa"
requires-python = ">=3.12"

dependencies = [
    # Web 框架（FastAPI 0.118+，lifespan 退出时序已修复）
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # 数据持久化
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # 缓存
    "redis>=5.2.0",

    # 音频处理（librosa 0.11+）
    "librosa>=0.11.0",
    "soundfile>=0.12.1",
    "numpy>=2.0.0",

    # AI 模型（Phase 1：用 librosa 自带 pyin；Phase 2 再加 onnxcrepe）
    "onnxruntime>=1.20.0",
    # "onnxcrepe @ git+https://github.com/yqzhishen/onnxcrepe.git",  # 暂不安装（需用户授权）

    # 工具
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]